added menu, navigation, about

--- a/www/templates/tab-order.html
+++ b/www/templates/tab-order.html
@@ -5,9 +5,9 @@
       <div class="item item-body">
         <div>
           <h2>Kies uw broodje</h2>
-          <ul class="list">
+<!--          <ul class="list">
 
-            <label class="item item-radio">
+        <label class="item item-radio">
                <input type="radio" name="group">
                <div class="item-content">
                  <span style="float : left"> Ciabatta of bol</span><span style="float : right"> &euro; 4.25</span>
@@ -30,7 +30,12 @@
                </div>
                <i class="radio-icon ion-checkmark"></i>
             </label>
-
+-->
+           <button ng-click="setSandwich('ciabatta-wit')" class="button button-full button-positive">Ciabatta (wit)</button>
+           <button ng-click="setSandwich('ciabatta-bruin')" class="button button-full button-positive">Ciabatta (bruin)</button>
+           <button ng-click="setSandwich('baquette-wit')" class="button button-full button-positive">Baquette (wit)</button>
+           <button ng-click="setSandwich('baquette-bruin')" class="button button-full button-positive">Baquette (bruin)</button>
+           <button ng-click="setSandwich('speltbol')" class="button button-full button-positive">Speltbol</button>
 
         </div>
       </div>
@@ -38,7 +43,7 @@
 
 
 
-  <button ng-click="goSpreads()" class="button button-full button-positive">Kies je beleg</button>
+
 
 
 
