--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -6,6 +6,10 @@
     <ion-nav-view name="tab-order"></ion-nav-view>
   </ion-tab>
 
+  <ion-tab title="Over" icon-off="ion-ios-information" icon-on="ion-ios-information" href="#/tab/about">
+    <ion-nav-view name="tab-about"></ion-nav-view>
+  </ion-tab>
+
 
 
 
