--- a/www/templates/tab-about.html
+++ b/www/templates/tab-about.html
@@ -1,7 +1,23 @@
 <ion-view view-title="Over">
   <ion-content class="padding">
 
-  
+    <div class="card">
+      <div class="item item-divider">
+       Ordr2
+      </div>
+    </div>
+
+
+    <div class="card">
+      <div class="item item-divider">
+       Trivento
+      </div>
+
+      <div style="text-align : center; margin-top : 20px; margin-bottom : 20px;">
+        <img  src="img/trivento.png"/>
+    </div>
+    </div>
+
 
   </ion-content>
 </ion-view>
