--- a/www/templates/tab-spreads.html
+++ b/www/templates/tab-spreads.html
@@ -1,24 +1,34 @@
 <ion-view view-title="Bestellen">
   <ion-content class="padding">
+
     <div class="list card">
       <div class="item item-divider">Beleg</div>
       <div class="item item-body">
+
         <ion-list>
-          <ion-item  ng-repeat="item in items" type="item-text-wrap" >
+          <button  ng-repeat="item in items" ng-click="setSpread(item.name)" class="button button-full button-spreads">
 
-            <h3>{{item.name}}</h3>
-            <p>{{item.description}}</p>
-
-          </ion-item>
+            <div class="row">
+            <div style="col-75" >
+              <h3>{{item.name}}</h3>
+              <p>{{item.description}}</p>
+            </div>
+            <div  class="col"
+              <span ng-show="isSpread(item.name)">
+                <span  class="ion-checkmark-round"></span>
+              </span>
+             </div>
+          </button>
         </ion-list>
       </div>
     </div>
 
 
-    <a  href="#/tab/send" class="button button-full button-positive">
+    <a  ng-click="complete()" class="button button-full button-positive">
       Afronden
     </a>
 
 
   </ion-content>
+
 </ion-view>
