--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -1,10 +1,21 @@
 
-<ion-tabs class="tabs-icon-top tabs-color-active-positive">
+<ion-tabs class="tabs-color-active-positive tabs-icon-only" ng-controller="MainCtrl as main">
 
   <!-- Dashboard Tab -->
-  <ion-tab title="Bestellen" icon-off="ion-ios-nutrition" icon-on="ion-ios-nutrition" href="#/tab/order">
+  <ion-tab title="Bestellen" icon-off="ion-ios-nutrition" icon-on="ion-ios-nutrition"
+      href="#/tab/order"
+      on-select="main.onTabSelected(this)"
+      on-deselect="main.onTabDeselected(this)"
+  >
     <ion-nav-view name="tab-order"></ion-nav-view>
   </ion-tab>
+
+
+  <ion-tab title="Bestellijst" icon-off="ion-clipboard" icon-on="ion-clipboard" href="#/tab/list">
+    <ion-nav-view name="tab-list"></ion-nav-view>
+  </ion-tab>
+
+
 
   <ion-tab title="Over" icon-off="ion-ios-information" icon-on="ion-ios-information" href="#/tab/about">
     <ion-nav-view name="tab-about"></ion-nav-view>
