--- a/www/templates/tab-orderlist.html
+++ b/www/templates/tab-orderlist.html
@@ -5,6 +5,12 @@
       <div class="item item-divider">
        Bestellijst
       </div>
+
+      <ion-list>
+        <div class="item" ng-repeat="item in orderList">
+          {{item}}
+        </div>  
+      </ion-list
     </div>
 
 
