--- a/www/templates/tab-send.html
+++ b/www/templates/tab-send.html
@@ -11,7 +11,7 @@
 
     <div class="list">
       <label class="item item-input">
-        <input type="text" placeholder="Naam" ng-model="name">
+        <input type="text" placeholder="Gebruiker" ng-model="name">
 
       </label>
       <label class="item item-input">
