--- a/www/templates/tab-send.html
+++ b/www/templates/tab-send.html
@@ -20,7 +20,7 @@
     </div>
 
     <button  ng-click="send(name, email)" class="button button-full button-positive">
-      Vesturen
+      Versturen
     </button>
 
   </ion-content>
